test/fail/classes/wrong_arg_count_class_method.lly
#[
SyntaxError: Wrong number of arguments to String.endswith (3 for 2).
    from wrong_arg_count_class_method.lly:6
]#

String.endswith("a", "b", "c")
